--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,6 @@ services:
       - "8123:8123"
     volumes:
       - ./clickhouse/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
-      - ./clickhouse/files:/files
-    networks:
-      - simplenet
   airflow:
     build: 
       context: airflow/
@@ -17,10 +14,4 @@ services:
       - "8080:8080"
     volumes:
       - ./airflow/dags:/usr/local/airflow/dags
-    networks:
-      - simplenet
-
-networks:
-  simplenet:
-    external:
-      name: simplenet
+      - ./airflow/files:/files
