add custom operatur as plugin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,4 @@ services:
     volumes:
       - ./airflow/dags:/usr/local/airflow/dags
       - ./airflow/files:/files
+      - ./airflow/plugins:/usr/local/airflow/plugins
